--- a/.github/scripts/README.tmpl
+++ b/.github/scripts/README.tmpl
@@ -64,6 +64,15 @@ Please navigate to https://nuclei.projectdiscovery.io for detailed documentation
 
 Nuclei-templates is powered by major contributions from the community. [Template contributions ](https://github.com/projectdiscovery/nuclei-templates/issues/new?assignees=&labels=&template=submit-template.md&title=%5Bnuclei-template%5D+), [Feature Requests](https://github.com/projectdiscovery/nuclei-templates/issues/new?assignees=&labels=&template=feature_request.md&title=%5BFeature%5D+) and [Bug Reports](https://github.com/projectdiscovery/nuclei-templates/issues/new?assignees=&labels=&template=bug_report.md&title=%5BBug%5D+) are more than welcome.
 
+To create Pull Request:-
+
+- Fork this project
+- Create your feature branch (`git checkout -b new-template`)
+- Commit your changes (`git commit -am 'Added new templates'`)
+- Push to the branch (`git push origin new-template`)
+- Create new Pull Request
+
+
 💬 Discussion
 -----
 
