Update README template to call get top 10

--- a/.github/scripts/README.tmpl
+++ b/.github/scripts/README.tmpl
@@ -53,7 +53,7 @@ An overview of the nuclei template directory including number of templates assoc
 </table>
 
 
-
+{get_top10()}
 
 
 📖 Documentation
