--- a/.github/scripts/README.tmpl
+++ b/.github/scripts/README.tmpl
@@ -32,29 +32,25 @@ We hope that you also contribute by sending templates via **pull requests** or [
 ## Nuclei Templates overview
 
 
-An overview of the nuclei template directory including number of templates associated with each directory. 
+An overview of the nuclei template project, including statistics on unique tags, author, directory, severity, and type of templates. The table below contains the top ten statistics for each matrix; an expanded version of this is [available here](TEMPLATES-STATS.md), and also available in [JSON](TEMPLATES-STATS.json) format for integration.
 
 <table>
 <tr>
 <td> 
 
-| Templates        | Counts                         | Templates       | Counts                          | Templates      | Counts                       |
-| ---------------- | ------------------------------ | --------------- | ------------------------------- | -------------- | ---------------------------- |
-| cves             | {countTpl("cves/*")}           | vulnerabilities | {countTpl("vulnerabilities/*")} | exposed-panels | {countTpl("exposed-panels")} |
-| takeovers        | {countTpl("takeovers")}        | exposures       | {countTpl("exposures/*")}       | technologies   | {countTpl("technologies")}   |
-| misconfiguration | {countTpl("misconfiguration")} | workflows       | {countTpl("workflows")}         | miscellaneous  | {countTpl("miscellaneous")}  |
-| default-logins   | {countTpl("default-logins/*")} | file            | {countTpl("file/*")}            | dns            | {countTpl("dns")}            |
-| fuzzing          | {countTpl("fuzzing")}          | helpers         | {countTpl("helpers/*")}         | iot            | {countTpl("iot")}            |
+## Nuclei Templates Top 10 statistics
+
+<table>
+<tr>
+<td> 
+
+{get_top10()}
 
 **{command("tree", -2, None)}**.
 
 </td>
 </tr>
 </table>
-
-
-{get_top10()}
-
 
 📖 Documentation
 -----
